add in the test framework and reorganize files a bit

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
   ></script>
 
   <link rel="stylesheet" href="css/styles.css">
-
-  <script src="js/scripts-logic.js" defer></script>
-  <script src="js/scripts-test.js" defer></script>
-  <script src="js/scripts-ui.js" defer></script>
+  
+  <script src="js/classes/TestManager.js" defer></script>
+  <script src="js/lib/convertNumToRobogerSpeak.js" defer></script>
+  <script src="js/lib/talkToUsMrRoboger.js" defer></script>
+  <script src="js/scripts.js" defer></script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Mr Roboger's Neighborhood</title>
 </head>
 <body class="my-3">
