--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="js/classes/TestManager.js" defer></script>
   <script src="js/lib/convertNumToRobogerSpeak.js" defer></script>
   <script src="js/lib/talkToUsMrRoboger.js" defer></script>
+  <script src="js/tests/convertNumToRobogerSpeak.js" defer></script>
   <script src="js/scripts.js" defer></script>
 
   <meta charset="UTF-8">
@@ -32,6 +33,10 @@
     <h1>Mr Roboger's Neighborhood</h1>
   </header>
 
-  <main class="container"></main>
+  <main class="container">
+
+    <h2>Tests</h2>
+    <ul id="output-tests"></ul>
+  </main>
 </body>
 </html>
