begin testing talkToUsMrRoboger, add support for checking array equivalency

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/lib/convertNumToRobogerSpeak.js" defer></script>
   <script src="js/lib/talkToUsMrRoboger.js" defer></script>
   <script src="js/tests/convertNumToRobogerSpeak.js" defer></script>
+  <script src="js/tests/talkToUsMrRoboger.js" defer></script>
   <script src="js/scripts.js" defer></script>
 
   <meta charset="UTF-8">
