--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <title>Mr Roboger's Neighborhood</title>
 </head>
@@ -35,6 +36,29 @@
   </header>
 
   <main class="container">
+    <section class="input-section">
+      <div class="card">
+        <header class="card-header">
+          <h2 class="card-title">Talk with Mr Roboger!</h2>
+        </header>
+
+        <div class="card-body">
+          <form>
+            <div class="input-group">
+              <label for="input-1" class="input-group-text">Enter a number</label>
+              <input id="input-1" type="number" class="form-control" />
+              <button type="submit" class="btn btn-primary">Talk!</button>
+            </div>
+          </form>
+
+          <hr />
+
+          <div>
+            <p id="output"></p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <h2>Tests</h2>
     <ul id="output-tests"></ul>
