--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
 
   <title>Mr Roboger's Neighborhood</title>
 </head>
-<body class="my-3">
-  <header class="container text-center">
-    <h1>Mr Roboger's Neighborhood</h1>
-  </header>
+<body>
+  <nav class="navbar navbar-dark bg-dark sticky-top">
+    <div class="container-fluid">
+      <a href="" class="navbar-brand d-inline-flex align-items-center">
+        <img class="" src="favicon.ico" />
+        <h1 class="h2 my-0 ms-3">Mr Roboger's Neighborhood</h1>
+      </a>
 
-  <main class="container">
+      <ul class="navbar-nav">
+      </ul>
+    </div>
+  </nav>
+
+  <main class="container my-5">
     <section class="input-section">
       <div class="card">
         <header class="card-header">
