add some descriptive text

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="card">
         <header class="card-header">
           <h2 class="card-title">Talk with Mr Roboger!</h2>
+          <h6 class="card-subtitle text-muted">Mr Roboger is lonely! You should say something to him, he'll talk your ear off after! He only understands numbers though, so don't try to say anything else.</h6>
         </header>
 
         <div class="card-body">
