--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
       </a>
 
       <ul class="navbar-nav">
+        <li class="navbar-item">
+          <div class="form-check form-switch text-light">
+            <label for="input-toggle-tests">
+              <input
+                id="input-toggle-tests"
+                class="form-check-input" 
+                type="checkbox" 
+              />
+              Test Mode
+            </label>
+          </div>
+        </li>
       </ul>
     </div>
   </nav>
@@ -48,7 +60,9 @@
       <div class="card">
         <header class="card-header">
           <h2 class="card-title">Talk with Mr Roboger!</h2>
-          <h6 class="card-subtitle text-muted">Mr Roboger is lonely! You should say something to him, he'll talk your ear off after! He only understands numbers though, so don't try to say anything else.</h6>
+          <h6 class="card-subtitle text-muted">
+            Mr Roboger is lonely! You should say something to him, he'll talk your ear off after! He only understands numbers though, so don't try to say anything else.
+          </h6>
         </header>
 
         <div class="card-body">
@@ -69,8 +83,18 @@
       </div>
     </section>
 
-    <h2>Tests</h2>
-    <ul id="output-tests"></ul>
+    <section class="test-section d-none my-5">
+      <div class="card">
+        <header class="card-header">
+          <h2 class="card-title">Tests</h2>
+          <h6 class="card-subtitle text-muted">
+            These tests are automatically run, the exact details can be found by looking at the source code in the js/tests directory.
+          </h6>
+        </header>
+
+        <ul id="output-tests" class="list-group list-group-flush"></ul>
+      </div>
+    </section>
   </main>
 </body>
 </html>
