add some input validation to limit possible user inputs

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 
           <hr />
 
-          <div>
-            <p id="output"></p>
+          <div id="output">
           </div>
         </div>
       </div>
