add link to github repo

--- a/index.html
+++ b/index.html
@@ -31,16 +31,25 @@
   <title>Mr Roboger's Neighborhood</title>
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-dark sticky-top">
+  <nav class="navbar navbar-expand navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
       <a href="" class="navbar-brand d-inline-flex align-items-center">
         <img class="" src="favicon.ico" />
         <h1 class="h2 my-0 ms-3">Mr Roboger's Neighborhood</h1>
       </a>
 
-      <ul class="navbar-nav">
+      <ul class="navbar-nav gap-2">
         <li class="navbar-item">
-          <div class="form-check form-switch text-light">
+          <a 
+            class="nav-link"
+            href="https://github.com/AlyxMoon/epicodus-project03-mr-robogers-neighborhood/"
+            target="_blank">
+            Github Repo
+          </a>
+        </li>
+
+        <li class="navbar-item d-flex align-items-center">
+          <div class="form-check form-switch text-light m-0">
             <label for="input-toggle-tests">
               <input
                 id="input-toggle-tests"
