position the robot better along with the text

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 
           <hr />
 
-          <div class="robot-wrapper">
+          <div class="robot-wrapper d-flex flex-column flex-md-row">
             <svg
+              class="flex-shrink-0"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 100 100"
               preserveAspectRatio="none"
@@ -127,9 +128,8 @@
                 "
               />
             </svg>
-          </div>
 
-          <div id="output">
+            <div id="output" class="bg-light flex-grow-1 p-3"></div>
           </div>
         </div>
       </div>
