add a bit more to the robot design

--- a/index.html
+++ b/index.html
@@ -96,16 +96,14 @@
                 class="robot-head-outer"
                 x="15" y="25"
                 width="70" height="50" rx="15" 
-                fill="none" stroke="#3FB0AC"
-                stroke-width="3%"
+                stroke-width="3"
               />
 
               <rect
                 class="robot-head-inner"
                 x="25" y="36"
                 width="50" height="30" rx="10" 
-                fill="#3FB0AC33" stroke="#3FB0AC"
-                stroke-width="3%"
+                stroke-width="3"
               />
 
               <circle
@@ -116,6 +114,38 @@
               <circle
                 class="robot-eye-right"
                 cx="60" cy="48" r="3"
+              />
+
+              <path
+                class="robot-ear-left"
+                stroke-width="2"
+                d="
+                  M 30,25
+                  l -5,-10
+                  z
+                "
+              />
+              
+              <path
+                class="robot-ear-right"
+                stroke-width="2"
+                d="
+                M 65,25
+                l 5,-13
+                z
+                "
+              />
+
+              <circle
+                class="robot-ear-lobe-left"
+                stroke-width="2"
+                cx="23" cy="11" r="4"
+              />
+
+              <circle
+                class="robot-ear-lobe-right"
+                stroke-width="2"
+                cx="72" cy="8" r="4"
               />
 
               <path
