--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             </div>
           </form>
 
+          <div class="interrupt-wrapper hidden">
+            <div class="interrupt-wrapper-inner mt-3 input-group justify-content-end">
+              <span class="input-group-text bg-light">
+                Uh oh ... Mr Roboger might be talking for awhile.
+              </span>
+              <button class="btn btn-warning">Interrupt Mr Roboger</button>
+            </div>
+          </div>
+
           <hr />
 
           <div class="robot-wrapper d-flex flex-column flex-md-row">
@@ -154,7 +163,7 @@
                   M 38,55
                   C 38,65
                     65,60
-                    65,55
+                    65,53
                 "
               />
             </svg>
