refactor and break up code a bit

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="js/classes/TestManager.js" defer></script>
   <script src="js/lib/convertNumToRobogerSpeak.js" defer></script>
   <script src="js/lib/talkToUsMrRoboger.js" defer></script>
+  <script src="js/lib/utilities.js" defer></script>
   <script src="js/tests/convertNumToRobogerSpeak.js" defer></script>
   <script src="js/tests/talkToUsMrRoboger.js" defer></script>
   <script src="js/scripts.js" defer></script>
