add a description in the UI and a write-up in the readme

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
   </nav>
 
   <main class="container my-5">
+    <section>
+      <p>
+        Welcome to Mr Roboger's Neighborhood! This was an app made for the Epicodus Bootcamp, in week 3. The goal was to make use of our knowledge of arrays, looping, and testing.
+      </p>
+      <p>
+        For this app, we had to make a function. This function would take a number and then return a list of numbers, from 0 to the number provided. But some numbers are replaced by something else! Curious to find out more? Try entering a number in the form below!
+      </p>
+    </section>
+
     <section class="input-section">
       <div class="card">
         <header class="card-header">
